--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,24 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,600&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+}/* .App {
   text-align: center;
   height: 100vh;
-}
+} */
 
 /* .App-logo {
   height: 40vmin;
   pointer-events: none;
 } */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 /* .App-header {
   background-color: #282c34;
@@ -28,12 +34,3 @@
 /* .App-link {
   color: #61dafb;
 } */
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
