--- a/client/src/components/ComponentProducts/FilterDetail.module.css
+++ b/client/src/components/ComponentProducts/FilterDetail.module.css
@@ -8,11 +8,12 @@
 .filterC {
    margin: 30px 15px;
    margin-bottom: 10px;
-      --glow-color: rgb(217, 176, 255);
+      --glow-color: rgb(255, 255, 255);
+      --glow-color-border: rgb(147, 8, 239);
       --glow-spread-color: rgba(191, 123, 255, 0.781);
       --enhanced-glow-color: rgb(231, 206, 255);
       --btn-color: rgb(100, 61, 136);
-      border: .25em solid var(--glow-color);
+      border: .2em solid var(--glow-color-border);
       padding: 1em 3em;
       color: var(--glow-color);
       font-size: 15px;
@@ -21,13 +22,5 @@
       border-radius: 1em;
       outline: none;
    
-      text-shadow: 0 0 .5em var(--glow-color);
-      position: relative;
-      transition: all 0.3s;
 }
 
-.filterC:hover{
-   box-shadow: 0 0 0.3em .2em var(--glow-color),
-        0 0 2em 2em var(--glow-spread-color),
-        inset 0 0 .2em .1em var(--glow-color);
-}
