--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Square+Peg&display=swap');
+:root{
+  --glow-color: rgb(217, 176, 255);
+	--glow-spread-color: rgba(191, 123, 255, 0.781);
+	--enhanced-glow-color: rgb(231, 206, 255);
+	--btn-color: rgb(100, 61, 136);
+}
 body {
   height:100%;
   margin: 0;
