pequeños cambios css

--- a/client/src/components/Products/productCard.css
+++ b/client/src/components/Products/productCard.css
@@ -16,7 +16,7 @@
     background: rgba(5, 6, 45, 0.423);
     color: white;
     border-radius: 0px 0px 10px 10px;
-    width: auto;
+    width: 328px;
     display: block;
     text-align: center;
     padding-top: 25px;
