--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,8 @@ body {
   font-family: 'Poppins' , sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(231,48,228);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
 code {
