Modificacion en Landing

--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -1,16 +1,15 @@
 .virtualBody{
-    background-color: rgb(255, 255, 255);
-    height: 77vh;
-    z-index: 0;
-}
-.containerLanding{
-    width: 60%;
+    position: relative;
     margin: auto;
-    margin-top: 27px;
-}
-.carousel-item{
-    margin-top: 30px;
+    align-items: center;
+    justify-content: center;
 }
 
-
-
+.virtualBody2 {
+    display: block;
+    margin: 10px;
+    width: auto;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 2%;
+  }
