--- a/client/src/components/Products/productCard.css
+++ b/client/src/components/Products/productCard.css
@@ -12,11 +12,11 @@
 	--btn-color: rgb(100, 61, 136);
 }
 .card__content {
-    margin: 10px;
+    margin: 4px;
     background: rgba(5, 6, 45, 0.423);
-    color: white;
+    color: rgb(76 56 99);
     border-radius: 0px 0px 10px 10px;
-    width: 328px;
+    width: 313px;
     display: block;
     text-align: center;
     padding-top: 25px;
@@ -24,7 +24,7 @@
     padding-right: 15px;
     padding-bottom: 10px;
     backdrop-filter: blur(10px);
-    text-shadow: 0 0 1em var(--glow-color);
+    text-shadow: -1px -1px 6px var(--glow-color);
     position: absolute;
     bottom: 0   
 }
@@ -33,7 +33,8 @@
 }
 .imgCard{
     border-radius: 10px;
-    width: 100%;
+    width: 98%;
+    margin-top: -19px;
 }
 .linkCard{
     text-decoration: none; 
