--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -1,99 +1,121 @@
+.aboutContainer {
+  height: 69.4vh;
+  margin-top: 100px;
+}
+
 .parent {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 50px;
-    grid-row-gap: 0px;
-    }
-    
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 2 / 1 / 3 / 2; }
-    .div4 { grid-area: 2 / 2 / 3 / 3; } 
- 
-  /* From uiverse.io by @gagan-gv */
- .card {
-    width: 190px;
-    height: 254px;
-    background: #f0f0f0;
-    border-radius: 10px;
-    text-align: center;
-    transition: all 0.5s;
-   }
-   
-   .card:hover {
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.623);
-    background-color: #4bb8ff;
-   }
-   
-   .card .blob {
-    height: 10px;
-    width: 75%;
-    border-radius: 0 0 30px 30px;
-    margin: 0 auto;
-    background-color: #4bb8ff;
-    visibility: visible;
-    transition: all 0.3s;
-   }
-   
-   .card:hover .blob {
-    height: 0;
-   }
-   
-   .card .img {
-    display: flex;
-    margin: 30px auto 10px auto;
-    width: 70px;
-    height: 70px;
-    background-color: #4bb8ff;
-    border-radius: 50%;
-    font-size: 11px;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.5s;
-   }
-   
-   .card:hover .img {
-    width: 100%;
-    height: 70%;
-    border-radius: 10px 0 0;
-    margin: 0 auto;
-    background-color: #f0f0f0;
-    z-index: 99999;
-   }
-   
-   .card h2 {
-    padding: 15px 10px;
-    font-size: 25px;
-    transition: all 0.1s;
-    z-index: -99;
-    line-height: 17px;
-   }
-   
-   .card span {
-    font-size: 18px;
-   }
-   
-   .card:hover h2 {
-    opacity: 0;
-    width: 100%;
-    position: absolute;
-    transition: all 0.5s;
-   }
-   
-   .card>p {
-    opacity: 0;
-    transition: all 0.75s;
-   }
-   
-   .card>p>svg {
-    padding: 5px;
-   }
-   
-   .card:hover>p {
-    position: absolute;
-    bottom: 15px;
-    left: 35px;
-    opacity: 1;
-    transition: all 0.1s;
-   }
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 50px;
+  grid-row-gap: 0px;
+  gap: 2em;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+  margin: auto;
+}
+
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+  margin: auto;
+}
+
+.div3 {
+  grid-area: 2 / 1 / 3 / 2;
+  margin: auto;
+}
+
+.div4 {
+  grid-area: 2 / 2 / 3 / 3;
+  margin: auto;
+}
+
+/* From uiverse.io by @gagan-gv */
+.cardAbout {
+  width: 190px;
+  height: 254px;
+  background: #f0f0f0;
+  border-radius: 10px;
+  text-align: center;
+  transition: all 0.5s;
+}
+
+.cardAbout:hover {
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.623);
+  background-color: #4bb8ff;
+}
+
+.cardAbout .blob {
+  height: 10px;
+  width: 75%;
+  border-radius: 0 0 30px 30px;
+  margin: 0 auto;
+  background-color: #4bb8ff;
+  visibility: visible;
+  transition: all 0.3s;
+}
+
+.cardAbout:hover .blob {
+  height: 0;
+}
+
+.cardAbout .img {
+  display: flex;
+  margin: 30px auto 10px auto;
+  width: 70px;
+  height: 70px;
+  background-color: #4bb8ff;
+  border-radius: 50%;
+  font-size: 11px;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+.cardAbout:hover .img {
+  width: 100%;
+  height: 70%;
+  border-radius: 10px 0 0;
+  margin: 0 auto;
+  background-color: #f0f0f0;
+  z-index: 99999;
+}
+
+.cardAbout h2 {
+  padding: 15px 10px;
+  font-size: 25px;
+  transition: all 0.1s;
+  z-index: -99;
+  line-height: 17px;
+}
+
+.cardAbout span {
+  font-size: 18px;
+}
+
+/* .cardAbout:hover h2 {
+  opacity: 0;
+  width: 100%;
+  position: absolute;
+  transition: all 0.5s;
+} */
+
+.cardAbout>p {
+  opacity: 0;
+  transition: all 0.75s;
+}
+
+.cardAbout>p>svg {
+  padding: 5px;
+}
+
+.cardAbout:hover>p {
+  position: absolute;
+  bottom: 15px;
+  left: 0px;
+  opacity: 1;
+  transition: all 0.1s;
+}
