--- a/client/src/components/Products/productCard.css
+++ b/client/src/components/Products/productCard.css
@@ -12,7 +12,7 @@
 	--btn-color: rgb(100, 61, 136);
 }
 .card__content {
-    margin: 4px;
+    margin: 3px;
     background: rgba(5, 6, 45, 0.423);
     color: rgb(76 56 99);
     border-radius: 0px 0px 10px 10px;
@@ -35,6 +35,7 @@
     border-radius: 10px;
     width: 98%;
     margin-top: -19px;
+    margin-left: 3px;
 }
 .linkCard{
     text-decoration: none; 
@@ -48,3 +49,6 @@
 -moz-box-shadow: 0px 0px 38px 3px rgba(151,22,232,0.73);
     transition: all 0.2s ease;
   }
+.cardContent2{
+    color: aliceblue;
+}
