--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -1,4 +1,4 @@
-.parent {
+.parendAbout {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -11,8 +11,10 @@
     .div3 { grid-area: 2 / 1 / 3 / 2; }
     .div4 { grid-area: 2 / 2 / 3 / 3; } 
  
+
   /* From uiverse.io by @gagan-gv */
- .card {
+ .cardAbout {
+  position: relative;
     width: 190px;
     height: 254px;
     background: #f0f0f0;
@@ -21,12 +23,12 @@
     transition: all 0.5s;
    }
    
-   .card:hover {
+   .cardAbout:hover {
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.623);
     background-color: #4bb8ff;
    }
    
-   .card .blob {
+   .cardAbout .blob {
     height: 10px;
     width: 75%;
     border-radius: 0 0 30px 30px;
@@ -36,11 +38,11 @@
     transition: all 0.3s;
    }
    
-   .card:hover .blob {
+   .cardAbout:hover .blob {
     height: 0;
    }
    
-   .card .img {
+   .cardAbout .img {
     display: flex;
     margin: 30px auto 10px auto;
     width: 70px;
@@ -53,7 +55,7 @@
     transition: all 0.5s;
    }
    
-   .card:hover .img {
+   .cardAbout:hover .img {
     width: 100%;
     height: 70%;
     border-radius: 10px 0 0;
@@ -62,7 +64,7 @@
     z-index: 99999;
    }
    
-   .card h2 {
+   .cardAbout h2 {
     padding: 15px 10px;
     font-size: 25px;
     transition: all 0.1s;
@@ -70,30 +72,33 @@
     line-height: 17px;
    }
    
-   .card span {
+   .cardAbout span {
     font-size: 18px;
    }
    
-   .card:hover h2 {
+   .cardAbout:hover h2 {
+    position: absolute;
     opacity: 0;
     width: 100%;
-    position: absolute;
     transition: all 0.5s;
    }
    
-   .card>p {
-    opacity: 0;
-    transition: all 0.75s;
+   .cardAbout>p {
+    position: absolute;
+    bottom: 15px;
+    opacity: 0%;
+    visibility:collapse;
    }
    
-   .card>p>svg {
+   .cardAbout>p>svg {
     padding: 5px;
    }
    
-   .card:hover>p {
+   .cardAbout:hover>p {
     position: absolute;
     bottom: 15px;
     left: 35px;
     opacity: 1;
+    visibility:visible;
     transition: all 0.1s;
    }
