--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -1,6 +1,6 @@
-.container{
-
-    margin: auto;
+.container {
+  display: flex;
+  margin: auto;
   margin-top: 40px;
   display: flex;
   flex-direction: column;
@@ -16,43 +16,45 @@
   box-shadow: 0 0 1em .25em var(--btn-color),
     0 0 4em 1em var(--glow-spread-color),
     inset 0 0 .75em .25em var(--btn-color);
-    /* display: flex;
+  /* 
     justify-content: center;
     align-items: center;
     margin-top: 86px;
     margin-bottom: 86px; */
 
 }
-.form{
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
+
+.form {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
 }
+
 .field {
-    margin-bottom: 10px;
-  }
-  
-  .field label {
-    display: block;
-    font-size: 12px;
-    color: #777;
-  }
-  
-  .field input {
-    display: block;
-    min-width: 250px;
-    line-height: 1.5;
-    font-size: 14px;
-  }
-  
-  input[type="submit"] {
-    display: block;
-    padding: 6px 30px;
-    font-size: 14px;
-    background-color: #4460AA;
-    color: #fff;
-    border: none
-  }
+  margin-bottom: 10px;
+}
+
+.field label {
+  display: block;
+  font-size: 12px;
+  color: #777;
+}
+
+.field input {
+  display: block;
+  min-width: 250px;
+  line-height: 1.5;
+  font-size: 14px;
+}
+
+input[type="submit"] {
+  display: block;
+  padding: 6px 30px;
+  font-size: 14px;
+  background-color: #4460AA;
+  color: #fff;
+  border: none
+}
