--- a/client/src/components/Products/productCard.css
+++ b/client/src/components/Products/productCard.css
@@ -1,16 +1,17 @@
 .card {
     position: relative;
     margin: auto;
-	width: 350px;
-	height: 550px;
-	border-radius: 10px;
-	box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-	background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
-	--glow-color: rgb(217, 176, 255);
-	--glow-spread-color: rgba(191, 123, 255, 0.781);
-	--enhanced-glow-color: rgb(231, 206, 255);
-	--btn-color: rgb(100, 61, 136);
+    width: 350px;
+    height: 550px;
+    border-radius: 10px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    --glow-color: rgb(217, 176, 255);
+    --glow-spread-color: rgba(191, 123, 255, 0.781);
+    --enhanced-glow-color: rgb(231, 206, 255);
+    --btn-color: rgb(100, 61, 136);
 }
+
 .card__content {
     margin: 3px;
     background: rgba(5, 6, 45, 0.423);
@@ -26,29 +27,33 @@
     backdrop-filter: blur(10px);
     text-shadow: -1px -1px 6px var(--glow-color);
     position: absolute;
-    bottom: 0   
+    bottom: 0
 }
-.containerImgCard{
-    height: 30vh;    
+
+.containerImgCard {
+    height: 30vh;
 }
-.imgCard{
+
+.imgCard {
     border-radius: 10px;
     width: 98%;
     margin-top: -19px;
     margin-left: 3px;
 }
-.linkCard{
-    text-decoration: none; 
-    padding: 3%;   
+
+.linkCard {
+    text-decoration: none;
+    padding: 3%;
 }
 
-  .card:hover {
+.card:hover {
     color: rgba(255, 255, 255, 1) !important;
-    box-shadow: 0px 0px 38px 3px rgba(151,22,232,0.73);
--webkit-box-shadow: 0px 0px 38px 3px rgba(151,22,232,0.73);
--moz-box-shadow: 0px 0px 38px 3px rgba(151,22,232,0.73);
+    box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
+    -webkit-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
+    -moz-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
     transition: all 0.2s ease;
-  }
-.cardContent2{
+}
+
+.cardContent2 {
     color: aliceblue;
 }
