Login Modal Styles

--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -1,9 +1,10 @@
 .loginContainer {
-   max-width: 350px;
+   width: 550px;
+   height: 62vh;
    margin: 15px auto;
    padding: 20px 15px;
-   background: url("../image/FondoNavBar.jpg");
-   background-size: cover;
+   background: url("../../assets/backgroundBlocks2.jpg");
+   background-size: contain;
    color: white;
    border-radius: 15px;
 }
@@ -23,7 +24,7 @@
    margin-top: 0;
 }
 
-.btnPrimary {
+/* .btnPrimary {
    margin-top: 5px;
    width: 50%;
    padding: 10px 10px;
@@ -35,7 +36,7 @@
    font-size: 1rem;
    cursor: pointer;
    letter-spacing: 1px;
-}
+} */
 
 .btnPrimary:hover {
    background-color: #02d302;
@@ -89,4 +90,45 @@
 
 .myswal{
    z-index: 4000;
+}
+.btnLoginModal{
+   margin: auto;
+   margin-top: 10%;;
+   border: .25em solid var(--glow-color);
+   padding: 1em 3em;
+   color: var(--glow-color);
+   font-size: 15px;
+   font-weight: bold;
+   background-color: var(--btn-color);
+   border-radius: 1em;
+   outline: none;
+   box-shadow: 0 0 1em .25em var(--glow-color),
+          0 0 4em 1em var(--glow-spread-color),
+          inset 0 0 .75em .25em var(--glow-color);
+   text-shadow: 0 0 .5em var(--glow-color);
+   position: relative;
+   transition: all 0.3s;
+  }
+  .btnLoginModal::after{
+   pointer-events: none;
+   content: "";
+   position: absolute;
+   top: 120%;
+   left: 0;
+   height: 100%;
+   width: 100%;
+   background-color: var(--glow-spread-color);
+   filter: blur(2em);
+   opacity: .7;
+   transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
+  }
+  .btnLoginModal:hover{
+   color: var(--btn-color);
+   background-color: var(--glow-color);
+   box-shadow: 0 0 1em .25em var(--glow-color),
+          0 0 4em 2em var(--glow-spread-color),
+          inset 0 0 .75em .25em var(--glow-color);
+  }
+.createAcc{
+   margin-left: 30%;
 }
