--- a/client/src/components/Details/details.css
+++ b/client/src/components/Details/details.css
@@ -67,7 +67,7 @@
     mask-image: var(--m-i), var(--m-i);
     -webkit-mask-origin: var(--m-o);
     mask-origin: var(--m-o);
-    -webkit-mask-clip: var(--m-o);
+    /* -webkit-mask-clip: var(--m-o); */
     mask-composite: exclude;
     -webkit-mask-composite: destination-out;
     filter: hue-rotate(0);
