--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -174,3 +174,17 @@
 .iconLinkedIn {
   fill: #f0f0f0;
 }
+@media screen and (max-width: 1366px) {
+  .mainAbout {
+    height: 72vh;
+    margin-top: 2%;
+  }
+  .cardAbout {
+    width: 150px;
+    height: 185px;
+  }
+}
+/*----------Media Queries (HIGH DEVICES) ----------*/
+@media screen and (min-width: 2048px) {
+
+}
