--- a/client/src/components/Carry/CarryCard.module.css
+++ b/client/src/components/Carry/CarryCard.module.css
@@ -1,26 +1,27 @@
 .productContainer {
-  max-width: 600px;
-  background: url("../image/FondoTarjetas.jpg");
-  background-size: cover;
-  color: white;
+  width: 100%;
+  background: transparent;
+  color: #ff2b91;
   padding: 15px;
-  margin: 15px auto;
+  margin: 25px auto;
   display: flex;
-  justify-content: center;
-  gap: 15px;
   align-items: center;
+  border-bottom: 1px solid transparent;
   border-radius: 15px;
-  -webkit-box-shadow: 5px 5px 50px 5px #000000;
-  box-shadow: 5px 5px 50px 5px #000000;
+  -webkit-box-shadow: 0px 10px 15px -16px #000000;
+  box-shadow: 0px 10px 15px -16px #000000;
 }
 
 .texContainer {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: stretch;
+  margin-left: 4%;
+  width: 100%;
 }
 
 .texContainer h2 {
-  margin-bottom: 0;
+  width: 100%;
 }
 
 .texContainer p {
@@ -32,9 +33,8 @@
 }
 
 .photoContainer {
-  width: 200px;
-  height: 200px;
-  margin-bottom: 15px;
+  width: 100px;
+  height: 100px;
   border-radius: 15px;
 }
 
@@ -69,29 +69,34 @@
   display: flex;
   justify-content: space-around;
 }
-
-.btnPlusMinus span {
+.btnPlusMinus{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5em;
+}
+/* .btnPlusMinus span {
   margin: 0 8px;
   font-size: 20px;
-}
+} */
 
 .btnPlusMinus button {
-  font-size: 20px;
-  cursor: pointer;
-  padding: 8px 13px;
-  border-radius: 25%;
-  border: none;
+  background: var(--btn-color); 
+  border-radius: 5px;
+  border: 2px solid transparent;
+  color: aliceblue;
 }
 
-.btnPlusMinus button:hover {
+/* .btnPlusMinus button:hover {
   background-color: #008000;
 }
 
 .btnPlusMinus button:active {
   color: white;
-}
+} */
 
 .btnDelete button {
+  margin-left: 20%;
   background-color: white;
   padding: 10px 13px;
   border-radius: 10px;
