--- a/client/src/components/CreateProduct/CreateProduct.css
+++ b/client/src/components/CreateProduct/CreateProduct.css
@@ -186,3 +186,26 @@ color: gray;
 .select {
   padding-bottom: 10px;
 }
+@media screen and (max-width: 1366px) {
+  .containerCreate {
+    margin: auto;
+    margin-top: 20px;
+    width: 40%;
+    height: 70.5vh;
+    margin-bottom: 10px;
+  }  
+  .formCreateProduct {
+    width: 45%;
+  }
+  .l__form__input-field input {
+    width: 100%;
+    height: 80%;  
+    padding-left: 0px;    
+    font-size: .7rem;    
+    font-weight: 300;
+  }
+}
+/*----------Media Queries (HIGH DEVICES) ----------*/
+@media screen and (min-width: 2048px) {
+
+}
