--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -22,3 +22,22 @@
     backdrop-filter: blur(10px);
     border-radius: 15px;
 }
+/*----------Media Queries (MEDIUM DEVICES) ----------*/
+@media screen and (max-width: 1366px) {
+    .virtualBody{
+        height: 75vh;
+    }
+    .imgCarrousel{
+        width: 63% !important;
+    }
+    .slider-wrapper{
+        background-color: #21072b4d;
+        backdrop-filter: blur(10px);
+        border-radius: 15px;
+        width: 90%;
+    }
+}
+/*----------Media Queries (HIGH DEVICES) ----------*/
+@media screen and (min-width: 2048px) {
+  
+}
