--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -1,8 +1,8 @@
 .loginContainer {
    width: 550px;
-   height: 62vh;
+   height: 65vh;
    margin: 15px auto;
-   padding: 20px 15px;
+   padding: 5px 15px;
    background: url("../../assets/backgroundBlocks2.jpg");
    background-size: contain;
    color: white;
@@ -24,27 +24,13 @@
    margin-top: 0;
 }
 
-/* .btnPrimary {
-   margin-top: 5px;
-   width: 50%;
-   padding: 10px 10px;
-   background-color: #008000;
-   outline: none;
-   border: none;
-   border-radius: 10px;
-   color: white;
-   font-size: 1rem;
-   cursor: pointer;
-   letter-spacing: 1px;
-} */
-
 .btnPrimary:hover {
    background-color: #02d302;
 }
 
 .login input {
-   padding: 7px 10px;
-   width: 60%;
+   padding: 10px 10px;
+   width: 40%;
    border-radius: 10px;
    outline: none;
    border: none;
@@ -88,12 +74,14 @@
    cursor: pointer;
 }
 
-.myswal{
+.myswal {
    z-index: 4000;
 }
-.btnLoginModal{
+
+.btnLoginModal {
    margin: auto;
-   margin-top: 10%;;
+   margin-top: 5%;
+   cursor: pointer;
    border: .25em solid var(--glow-color);
    padding: 1em 3em;
    color: var(--glow-color);
@@ -103,13 +91,14 @@
    border-radius: 1em;
    outline: none;
    box-shadow: 0 0 1em .25em var(--glow-color),
-          0 0 4em 1em var(--glow-spread-color),
-          inset 0 0 .75em .25em var(--glow-color);
+      0 0 4em 1em var(--glow-spread-color),
+      inset 0 0 .75em .25em var(--glow-color);
    text-shadow: 0 0 .5em var(--glow-color);
    position: relative;
    transition: all 0.3s;
-  }
-  .btnLoginModal::after{
+}
+
+.btnLoginModal::after {
    pointer-events: none;
    content: "";
    position: absolute;
@@ -121,14 +110,39 @@
    filter: blur(2em);
    opacity: .7;
    transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
-  }
-  .btnLoginModal:hover{
+}
+
+.btnLoginModal:hover {
    color: var(--btn-color);
    background-color: var(--glow-color);
    box-shadow: 0 0 1em .25em var(--glow-color),
-          0 0 4em 2em var(--glow-spread-color),
-          inset 0 0 .75em .25em var(--glow-color);
-  }
-.createAcc{
+      0 0 4em 2em var(--glow-spread-color),
+      inset 0 0 .75em .25em var(--glow-color);
+}
+
+.createAcc {
    margin-left: 30%;
+}
+
+.loginGoogle {
+   width: 18%;
+   height: 10vh;
+   background-image: url('../../assets/logoGoogle.png');
+   background-size: 110%;
+   background-position-y: 60%;
+   background-position-x: 70%;
+   border-radius: 50px;
+   border: .25em solid var(--glow-color);
+   box-shadow: 0 0 1em .25em var(--glow-color),
+      0 0 4em 1em var(--glow-spread-color),
+      inset 0 0 .75em .25em var(--glow-color);
+      cursor: pointer;
+}
+/*----------Media Queries (MEDIUM DEVICES) ----------*/
+@media screen and (max-width: 1366px) {
+
+}
+/*----------Media Queries (HIGH DEVICES) ----------*/
+@media screen and (min-width: 2048px) {
+  
 }
