--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -92,3 +92,26 @@ nav {
 	margin: auto;
 	margin-right: 4%;
 }
+/*----------Media Queries (MEDIUM DEVICES) ----------*/
+@media screen and (max-width: 1366px) {
+	.mainNav li  {
+		float: left;
+		padding: 20px;
+		font-size: 1.5em;
+		height: 5.2vh;
+		margin-top: 2%px;
+	}
+	.logoNav {
+		width: 30px;
+	}
+	.btnAddCarry{
+		font-size: 10px !important;
+	}
+	.itemRigh{
+		margin-top: 5px;
+	}
+}
+/*----------Media Queries (HIGH DEVICES) ----------*/
+@media screen and (min-width: 2048px) {
+  
+}
