--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -1,28 +1,39 @@
 .mainAbout {
+  width: 100%;
   height: 76vh;
+  margin: auto;
   margin-top: 2%;
+  display: flex;
 }
 
-.parendAbout {
+/* .parendAbout {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 50px;
   grid-row-gap: 0px;
+} */
+
+/* .div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; } */
+/* .div3 { grid-area: 1 / 3 / 2 / 4; }
+.div4 { grid-area: 1 / 4 / 2 / 5; } */
+.parendAbout {
+  margin-left: 18%;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  gap: 10%;
 }
 
-.div1 { grid-area: 1 / 1 / 2 / 2; }
-.div2 { grid-area: 1 / 2 / 2 / 3; }
-.div3 { grid-area: 1 / 3 / 2 / 4; }
-.div4 { grid-area: 1 / 4 / 2 / 5; }
 
 
-/* From uiverse.io by @gagan-gv */
 .cardAbout {
   margin: auto;
   position: relative;
-  width: 210px;
-  height: 285px;
+  width: 25vh;
+  height: 35vh;
   font-family: 'Square Peg', cursive;
   color: var(--btn-color);
   text-shadow: 0 3px 3px var(--glow-color);
@@ -32,18 +43,18 @@
   transition: all 0.5s;
   margin-top: 5%;
   box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
-    -webkit-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
-    -moz-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
-    transition: all 0.2s ease;
+  -webkit-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
+  -moz-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
+  transition: all 0.2s ease;
 }
 
 .cardAbout:hover {
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.623);
   background-color: #4bb8ff;
   box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
-    -webkit-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
-    -moz-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
-    transition: all 0.2s ease;
+  -webkit-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
+  -moz-box-shadow: 0px 0px 38px 3px rgba(151, 22, 232, 0.73);
+  transition: all 0.2s ease;
 }
 
 .cardAbout .blob {
@@ -128,6 +139,7 @@
   background-size: 150%;
   background-repeat: no-repeat;
 }
+
 .card2 {
   background-image: url('../../assets/fotoAngelo.jpg');
   background-position: 53%;
@@ -135,6 +147,7 @@
   background-size: 128%;
   background-repeat: no-repeat;
 }
+
 .card3 {
   background-image: url('../../assets/fotoMati.png');
   background-position: 53%;
@@ -142,6 +155,7 @@
   background-size: 111%;
   background-repeat: no-repeat;
 }
+
 .card4 {
   background-image: url('../../assets/fotoRich.png');
   background-position: 53%;
@@ -163,17 +177,21 @@
 .iconLinkedIn {
   fill: #f0f0f0;
 }
+
 @media screen and (max-width: 1366px) {
   .mainAbout {
+    width: 100%;
     height: 72vh;
     margin-top: 2%;
   }
+  .parendAbout {
+    margin-left: 15%;
+  }
   .cardAbout {
-    width: 150px;
-    height: 185px;
+    width: 30vh;
+    height: 45vh;
   }
 }
-/*----------Media Queries (HIGH DEVICES) ----------*/
-@media screen and (min-width: 2048px) {
 
-}
+/*----------Media Queries (HIGH DEVICES) ----------*/
+@media screen and (min-width: 2048px) {}
