--- a/client/src/components/CreateProduct/CreateProduct.css
+++ b/client/src/components/CreateProduct/CreateProduct.css
@@ -22,18 +22,23 @@ form,
 select {
   border-radius: 5px;
   color: rgb(152, 40, 204);
-  
+
 }
-.containerCreate select{
+
+.containerCreate select {
   border: 1px solid rgb(152, 40, 204);
 }
 
 .containerCreate form {
   margin: auto;
 }
-.titleCreate{
+
+.titleCreate {
   margin-bottom: -11px;
+  color: var(--glow-spread-color);
+  text-shadow: 1px 2px 3px rgb(88, 1, 122);
 }
+
 .formCreateProduct {
   width: 55%;
   display: flex;
@@ -168,12 +173,12 @@ color: gray;
   text-align: center;
 }
 
-.fieldCreate{
+.fieldCreate {
   padding: 10px;
   border: 1px solid rgb(152, 40, 204);
 }
 
-.buttonCreateCategory{
+.buttonCreateCategory {
   margin-left: 15px;
 }
 
@@ -186,26 +191,64 @@ color: gray;
 .select {
   padding-bottom: 10px;
 }
+
 @media screen and (max-width: 1366px) {
   .containerCreate {
     margin: auto;
     margin-top: 20px;
-    width: 40%;
-    height: 70.5vh;
+    width: 32%;
+    height: 70.4vh;
     margin-bottom: 10px;
-  }  
-  .formCreateProduct {
-    width: 45%;
+    flex-wrap: nowrap;
   }
+
+  .formCreateProduct {
+    width: 55%;
+  }
+
+  .l__form__input-field {
+    margin: auto;
+    margin-top: 15px;
+  }
+
   .l__form__input-field input {
     width: 100%;
-    height: 80%;  
-    padding-left: 0px;    
-    font-size: .7rem;    
+    height: 80%;
+    padding-left: 0px;
+    font-size: .7rem;
     font-weight: 300;
   }
-}
-/*----------Media Queries (HIGH DEVICES) ----------*/
-@media screen and (min-width: 2048px) {
 
+  .select {
+    padding-bottom: 1px;
+  }
+
+  #txtCreate {
+    margin-top: 43px;
+    height: 30px;
+  }
+
+  #fileInput {
+    width: 100%;
+    height: 100%;
+    margin-top: 30px;
+    margin-bottom: -35px;
+  }
+
+  .todosCampos {
+    margin-top: 0px;
+  }
+
+  .label-form {
+    margin-top: -15px;
+    font-size: .8em !important;
+  }
+
+  .label-formTxt {
+    margin-top: 15px;
+    font-size: .8em !important;
+  }
 }
+
+/*----------Media Queries (HIGH DEVICES) ----------*/
+@media screen and (min-width: 2048px) {}
