--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -194,4 +194,11 @@
 }
 
 /*----------Media Queries (HIGH DEVICES) ----------*/
-@media screen and (min-width: 2048px) {}
+@media screen and (min-width: 2040px) and (max-width: 2160px)  {
+  .parendAbout {
+    margin-left: 7%;
+  }
+  .mainAbout {
+    height: 77.9vh;
+  }
+}
