--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -41,6 +41,14 @@
     }
 }
 /*----------Media Queries (HIGH DEVICES) ----------*/
-@media screen and (min-width: 2048px) {
-  
+@media screen and (min-width: 2040px) and (max-width: 2160px)  {
+    .virtualBody{
+        height: 80.1vh;
+    }
+    .virtualBody2{
+        margin-top: 20px;
+    }
+    .imgCarrousel{
+        width: 100% !important;
+    }
 }
