--- a/client/src/components/Details/details.css
+++ b/client/src/components/Details/details.css
@@ -215,3 +215,11 @@
 @media screen and (min-width: 2048px) {
   
 }
+
+
+.SizeSoldOut{
+    color:rgb(255, 0, 166)
+}
+
+.soldOut{
+color:rgb(255, 0, 166)}
