--- a/client/src/components/GoogleMap/GoogleMap.css
+++ b/client/src/components/GoogleMap/GoogleMap.css
@@ -2,11 +2,14 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    position: absolute;
-    top: 10%;
-    left: 65%;
-    width: 30%;
+}
+.Columnas{
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    gap: 15px;
 }
 
 .OpcionesAdress {
@@ -19,4 +22,28 @@ p.SearchBox {
     display: flex;
     width: 100%;
     justify-content: center;
+}
+
+.BoxPasarela{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
+
+.Pasarela{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    background-color: red;
+    width: 1200px;
+    height: 800px;
+}
+
+.Adress{
+    width: 300px;
+    display: flex;
 }
