--- a/client/src/components/NavUser/NavUser.module.css
+++ b/client/src/components/NavUser/NavUser.module.css
@@ -23,15 +23,17 @@
 
 /* / Dropdown button / */
 .dropdown .dropbtn {
+  width:81px;
+  height: 81px;
   border: 2px solid #1C6EA4;
   border-radius: 40px;
   font-size: 12px;
   outline: none;
   color: white;
-  padding: 14px 16px;
   background-color: inherit;
    font-family: inherit;
    margin: 0; 
+   overflow: hidden;
 }
 /* / Add a red background color to navbar links on hover / */
 .navbar a:hover, .dropdown:hover .dropbtn {
@@ -40,12 +42,13 @@
 
 /* / Dropdown content (hidden by default) / */
 .dropdown_content {
+  margin-top: 82px;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 130px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 90;
 }
 
 /* / Links inside the dropdown / */
@@ -66,4 +69,17 @@
 /* / Show the dropdown menu on hover */ 
 .dropdown:hover .dropdown_content {
   display: block;
+}
+.dropbtn {
+  cursor: pointer;
+}
+.avatar{
+  margin-left: -22%;
+  max-width: 90px;
+  max-height: 90px;
+  width: fit-content;
+}
+.avatarDB{
+  margin-left: -22%;
+  width: 10%;
 }
