--- a/client/src/components/PasarelaDePago/FormularioContacto.css
+++ b/client/src/components/PasarelaDePago/FormularioContacto.css
@@ -115,3 +115,21 @@
 .btnBuy:hover {
   background-color: #01c201;
 }
+.containerContactPay{
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  gap: 2em;
+}
+.containerContactPay input{
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid rgb(152, 40, 204);
+}
+.buttonPreview{
+position: absolute;
+}
