--- a/client/src/components/PasarelaDePago/Pasarela.css
+++ b/client/src/components/PasarelaDePago/Pasarela.css
@@ -1,39 +1,62 @@
-.BoxPasarela{
+.BoxPasarela {
     display: flex;
     flex-direction: row;
     align-content: center;
     justify-content: center;
+    height: 80.1vh;
 }
-
-.Pasarela{
+.Pasarela {
     position: relative;
     display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
-    margin-top: 5%;
+    margin-top: 130px;
     margin-bottom: 5%;
-    background-color: red;
-    width: 1200px;
-    height: 900px;
+    background-color: transparent;
+    border-radius: 15px;
+    -webkit-box-shadow: 5px 5px 50px 5px #000000;
+    box-shadow: 5px 5px 40px -4px #000000;
+    width: 70%;
+    height: 65vh;
     align-items: center;
     gap: 10px;
 }
 
-.buttonContinue{
-    width: 300px;
+.buttonContinue {
+    width: 160px;
+    margin: auto;
+    margin-top: 539px;
+    margin-left: 300px;
+    position: absolute;
 }
-.buttonPreview{
+
+.buttonPreview {
     position: absolute;
     bottom: 5px;
     left: 5px;
 }
-
-.ListaPasarela{
+/* .css-1kvipzo{
+    
+} */
+.navMaps, .ListaPasarela {
+    position: absolute;
+    margin-top: 60px;
+    margin-left: auto;
+    width: 60%;
     display: flex;
-    gap: 5px;
+    gap: 135px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 5px;
+    -webkit-box-shadow: 5px 5px 50px 5px #000000;
+    box-shadow: 5px 5px 40px -4px #000000;
+    backdrop-filter: blur(3px);
 }
 
-#LisPasarelaSelect{
-    background-color: aqua;
+#LisPasarelaSelect {
+    background-color: rgb(204, 131, 228);
+    padding: 15px;
+    border-radius: 5px;
 }
