--- a/client/src/components/PasarelaDePago/ResumenMetodoCompra.css
+++ b/client/src/components/PasarelaDePago/ResumenMetodoCompra.css
@@ -9,6 +9,7 @@
 
 .btnPayPasarela {
   margin: 0 auto;
+  margin-left: 0px;
   display: block;
   max-width: 100%;
   width: 750px;
@@ -16,12 +17,12 @@
   padding: 10px 15px;
   outline: none;
   cursor: pointer;
-  background-color: #008000;
+  background-color: #b311fe;
   color: white;
   border: none;
   font-size: 1.2rem;
 }
 
 .btnPayPasarela:hover {
-  background-color: #05b405;
+  background-color: #f51ce7;
 }
