Fix size for images for products created

--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -29,8 +29,8 @@
 }
 
 ::placeholder{
-  font-family: 'Square peg', cursive ;
-  font-size: 1.5em;
+  font-family: 'Poppins', cursive ;
+  font-size: .9em;
 }
 
 .field {
