--- a/client/src/components/Details/details.css
+++ b/client/src/components/Details/details.css
@@ -10,6 +10,7 @@
 
 .imageContainer {
     transition: 0.5s;
+    margin: auto;
 }
 
 .imageContainer img {
@@ -18,10 +19,14 @@
     box-shadow: 0 0 1em .25em var(--glow-color),
         0 0 4em 1em var(--glow-spread-color),
         inset 0 0 .75em .25em var(--glow-color);
+        min-width: 150px;
+        max-width: 350px;
+        min-height: 385px;
+        max-height: 385px;
 }
 
 .imageContainer:hover {
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
 
 .detailsContainer {
@@ -197,18 +202,39 @@
         height: 69.7vh;
     }
     .imageContainer img{
-        margin-left: 5%;
-        width: 85%;
+        margin-left: 20%;
+        min-width: 280px;
+        max-width: 280px;
+        min-height: 357px;
+        max-height: 357px;
     }
 	.imageContainer:hover {
         transform: scale(1.2);
     }
     .cardDetail{
+        margin-left: 100px;
         width: 15%;
         font-size: 1em;
+        padding: 1em 3em;
     }
     .SizeOnSale, .SizeSoldOut{
         margin-top: 10px !important;
+    }
+}
+/*----------Media Queries (MEDIUM DEVICES) ----------*/
+@media screen and (min-width: 1367px) and (max-width: 1728px)  {
+    .imageContainer img{
+        margin-left: 0%;
+        min-width: 280px;
+        max-width: 280px;
+        min-height: 357px;
+        max-height: 357px;
+    }
+    .cardDetail{
+        margin-left: 0px;
+        width: 20%;
+        font-size: 1em;
+        padding: 1em 3em;
     }
 }
 /*----------Media Queries (HIGH DEVICES) ----------*/
