--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -110,8 +110,15 @@ nav {
 	.itemRigh{
 		margin-top: 5px;
 	}
+	.dropdown .dropbtn {
+		margin: -28px;
+	}
 }
-/*----------Media Queries (HIGH DEVICES) ----------*/
+/*----------Media Queries (FHD DEVICES) ----------*/
+@media screen and (min-width: 1367px) and (max-width: 1728px)  {
+
+  }
+/*----------Media Queries (UHD DEVICES) ----------*/
 @media screen and (min-width: 2048px) {
   
 }
