--- a/client/src/components/NavUser/NavUser.module.css
+++ b/client/src/components/NavUser/NavUser.module.css
@@ -18,7 +18,7 @@
 /* / The dropdown container / */
 .dropdown {
   float: left;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* / Dropdown button / */
@@ -43,11 +43,13 @@
 /* / Dropdown content (hidden by default) / */
 .dropdown_content {
   margin-top: 82px;
+  margin-left: -25px;
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #200248;
   min-width: 130px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: 5px;
   z-index: 90;
 }
 
@@ -63,7 +65,7 @@
 
 /* / Add a grey background color to dropdown links on hover / */
 .dropdown_content a:hover {
-  background-color: #ddd;
+  background-color: rgb(240, 0, 112);
 }
 
 /* / Show the dropdown menu on hover */ 
@@ -75,11 +77,39 @@
 }
 .avatar{
   margin-left: -22%;
+  margin-top: -2px;
+  min-width: 90px;
+  min-height: 90px;
   max-width: 90px;
   max-height: 90px;
   width: fit-content;
+  /* margin-top: -2px; */
 }
 .avatarDB{
   margin-left: -22%;
   width: 10%;
+}
+/*----------Media Queries (MEDIUM DEVICES) ----------*/
+@media screen and (max-width: 1366px) {
+	.dropdown .dropbtn {
+		margin: -22px;
+    width:70px;
+    height: 70px;
+	}
+  .avatar{
+    margin-left: -33%;
+    margin-top:  -10px;
+  }
+  .dropdown_content {
+    margin-top: 48px;
+    margin-left: -50px;
+  }
+}
+/*----------Media Queries (FHD DEVICES) ----------*/
+@media screen and (min-width: 1367px) and (max-width: 1728px)  {
+
+  }
+/*----------Media Queries (UHD DEVICES) ----------*/
+@media screen and (min-width: 2048px) {
+  
 }
